@@ -1,14 +1,14 @@
 Package: GSEABase
 Type: Package
 Title: Gene set enrichment data structures and methods
-Version: 1.13.1
+Version: 1.13.2
 Author: Martin Morgan, Seth Falcon, Robert Gentleman
 Maintainer: Biocore Team c/o BioC user list <bioconductor@stat.math.ethz.ch>
 Description: This package provides classes and methods to support
              Gene Set Enrichment Analysis (GSEA).
 License: Artistic-2.0
 Depends: R (>= 2.6.0), Biobase, annotate, methods, graph
-Suggests: Ruuid, hgu95av2.db, GO.db, org.Hs.eg.db
+Suggests: hgu95av2.db, GO.db, org.Hs.eg.db
 Imports: annotate, AnnotationDbi, Biobase, graph, methods, XML
 LazyLoad: yes
 biocViews: Infrastructure, Bioinformatics
